feat: update hero sections and landing page content
- Update hero text on landing page with new tribute message
- Change 'How It Works' section title to 'The Works'
- Remove animated videos from hero sections on captain-heart, stories, and motivate pages
- Update hero section titles: 'Hockey Wisdom' with 'Penalty Box Philosopher's Hockey Essentials' subtitle
- Fix TypeScript linting errors in trivia-set-test files

--- a/content_trivia/quick-fire/1.md
+++ b/content_trivia/quick-fire/1.md
@@ -1,8 +1,8 @@
 ---
-title: "Hockey Legends Quick Fire"
-category: "legends"
-gameType: "quickfire"
-difficulty: "easy"
+title: 'Hockey Legends Quick Fire'
+category: 'legends'
+gameType: 'quickfire'
+difficulty: 'easy'
 timeLimit: 10
 pointsPerQuestion: 10
 totalQuestions: 3
@@ -11,9 +11,11 @@ totalQuestions: 3
 # Quick Fire: Hockey Legends
 
 ## Question 1
+
 **Question:** Who holds the NHL record for most career assists?
 
 **Options:**
+
 - Mario Lemieux
 - Wayne Gretzky
 - Gordie Howe
@@ -26,9 +28,11 @@ totalQuestions: 3
 ---
 
 ## Question 2
+
 **Question:** Which player is known as "The Great One"?
 
 **Options:**
+
 - Wayne Gretzky
 - Mario Lemieux
 - Gordie Howe
@@ -41,9 +45,11 @@ totalQuestions: 3
 ---
 
 ## Question 3
+
 **Question:** Who scored the most goals in a single NHL season?
 
 **Options:**
+
 - Wayne Gretzky
 - Mario Lemieux
 - Mike Bossy
