--- a/content_trivia/true-false/1.md
+++ b/content_trivia/true-false/1.md
@@ -1,8 +1,8 @@
 ---
-title: "Hockey Geography True/False"
-category: "geography"
-gameType: "truefalse"
-difficulty: "easy"
+title: 'Hockey Geography True/False'
+category: 'geography'
+gameType: 'truefalse'
+difficulty: 'easy'
 timeLimit: 15
 pointsPerQuestion: 5
 totalQuestions: 1
@@ -11,6 +11,7 @@ totalQuestions: 1
 # True/False: Hockey Geography
 
 ## Question 1
+
 **Statement:** The Montreal Canadiens play at the Bell Centre.
 
 **Answer:** True
